# university-pythonweb-hw-12

./: .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/_static/: custom.css
migrations/: env.py
migrations/versions/: 081593a07c86_init.py  3ee724596af9_init.py  5277fc06b5e9_init.py  57e158fe8b17_init.py  64e1c94ca8d8_init.py  6d2cd4beb647_after_docker_added_some_data.py  72a92abf51f7_add_to_model_user_role.py  7ab5216b00f3_init_migration_hw_12.py  8cf21062ab75_new_models_added.py  94d1fa3cdafa_init.py  9b49d884e213_new_models_added.py  a6e3e0098ffd_init.py  a71d9b7386c9_init.py  b5f4b3fddedb_test_after_docker.py  b718f235df43_init.py  b79eed6d2a0b_add_to_model_user_email_and_avatar.py  d5b51864e6ec_init.py
src/conf/: config.py  constants.py  messages.py
src/core/: depend_service.py  email_token.py
src/entity/: models.py
src/repositories/: base.py  contacts_repository.py  refresh_token_repository.py  user_repository.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  email.py  password.py  token.py  user.py
src/services/: auth.py  cache.py  contacts.py  email.py  upload_file_service.py  user.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py
tests/repositories/: test_base_repository.py  test_contacts_repository.py
